# wqb-rs

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
ace/: Cargo.toml
ace/src/: err.rs  lib.rs  main.rs
ace/src/app/: mod.rs  runner.rs
ace/src/high_level/: brain_client.rs  mod.rs  simple_strategy.rs  sql_db.rs  types.rs
ace/src/low_level/: client.rs  mod.rs  types.rs
rig-agentic/: Cargo.toml
wqb_api/: Cargo.toml
wqb_api/src/: client.rs  lib.rs  model.rs  tests.rs
