[workspace]

resolver = "3"
members = ["wqb_api"]

[workspace.package]

version = "0.1.0"
authors = ["KaceSuen <myant91@126.com>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]

reqwest = { version = "0.12", features = ["default"] }
tokio = { version = "1.0", features = ["full"] }

thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
