[workspace]

resolver = "3"
members = ["ace"]

[workspace.package]

version = "0.1.0"
authors = ["KaceSuen <myant91@126.com>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]

tokio = { version = "1.0", features = ["full"] }

reqwest = { version = "0.12", features = ["cookies", "json"] }
url = "2.5.8"

thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
test-log = { version = "0.2", features = ["trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

polars = { version = "0.53.0", features = ["polars-io", "json"] }
