[package]
name = "ace"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true

reqwest = { workspace = true , features = ["cookies", "json"]}
url.workspace = true

thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true

polars.workspace = true
[dev-dependencies]
test-log.workspace = true
