[package]
name = "ace"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true

reqwest = { workspace = true , features = ["cookies", "json"]}
url.workspace = true

thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true

polars.workspace = true
md5 = "0.8.0"
anyhow = "1.0.102"
tokio-stream = "0.1.18"
[dev-dependencies]
test-log.workspace = true
