[package]
name = "wqb_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true , features = ["cookies", "json"]}

thiserror.workspace = true
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true
# serde_urlencoded.workspace = true

url.workspace = true
